--- a/sitepage/css/site.css
+++ b/sitepage/css/site.css
@@ -4,31 +4,19 @@ body{
 	font-size: 18px
 }
 
-header{
-	width: 95%;
-	margin: 0 auto;
-}
 
-header ul{}
+
+
 
 .header,.top-half,.bottom-half,.footer,.subfooter {
-	width: 95%;
+	width: 95%;	
 	margin: 0 auto;	
 }
-
 ol,ul{
-
-	float: left;
 	list-style-type: none;
-	padding: 0;
-	width: 100%;
 }
-header{
-	float: left;
-	width: 100%;
-	height: 70px;
-	margin-bottom: 30px;
-}
+
+
 header,footer{
 	background-color:#5a97bf;
 	opacity: .7;
@@ -45,6 +33,12 @@ footer{
 
 	margin-top: 30px;
 
+}
+.bottom-half ol{
+	float: left;
+	list-style-type: none;
+	padding: 0;
+	width: 100%;
 }
 
 .footer {
@@ -152,6 +146,10 @@ a{
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 40px;
+}
+
+.header-color{
+	background-color:#5a97bf;
 }
 
 .hip-hop, .rap{
