--- a/sitepage/css/site.css
+++ b/sitepage/css/site.css
@@ -410,6 +410,16 @@ a{
 .reggae{
 	background-color: #FF0000;
 }
+/*============Chat Info ==================*/
+#content #chatList {
+	right: 20px;
+	left: 230px;
+}
+
+#content #onlineListContainer {
+	left: 20px;
+}
+
 
 /*============ Tablet View ===============*/
 @media (max-width: 992px) {
