--- a/sitepage/chat/lib/template/loggedIn.html
+++ b/sitepage/chat/lib/template/loggedIn.html
@@ -133,6 +133,7 @@
 		        <li><a href="../about.html">About</a></li>
 		        <li><a href="../chat/index.php">Chat</a></li>
 		        <li><a href="../shop.html">Shop</a></li>
+		        <li><a href="../index.html">Login</a></li>
 		        
 		      </ul>
 
