--- a/sitepage/chat/lib/template/loggedIn.html
+++ b/sitepage/chat/lib/template/loggedIn.html
@@ -178,25 +178,19 @@
 				<img src="https://photos-2.dropbox.com/t/0/AADDnikwBk4UdRxJUMSVqa4YjM3YaMwjCM73RbnRD3M2_g/12/145420559/jpeg/32x32/3/_/1/2/clean_mess.jpg/VDUH1O7yQ_j3fZfiZcVI3hc3HTpZ8eUIni1eHSjWX6E?size=1280x960" />
 			</div>
 
-			<div id="jquery_jplayer_1" class="jp-jplayer"></div>
-			<div id="jp_container_1" class="jp-audio music-box">
-				<div class="jp-type-single">
-					<div class="jp-gui jp-interface">
-						<ul class="jp-controls media-player">
-							<li class="box rap"><a href="javascript:;" class="jp-play" tabindex="1">play</a></li>
-							<li class="chat-info"><a href="javascript:;" class="jp-pause" tabindex="1">pause</a></li>
-							<li><span class="jp-title"></span></li>
-						</ul>
-
-					</div>
-
-				</div>
-				<div class="jp-no-solution">
-					<span>Update Required</span>
-					To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-				</div>
-			</div>
+			<!-- JPlayer Data -->
+			<div id="jquery_jplayer_2"></div>
+						<div id="jp_container_1">
+							<a href="#" class="jp-play"><div class="country box media"></div></a>
+							<a href="#" class="jp-pause"><div class="country box media-pause"></div></a>
+						</div>
+						<div class="chat-info">
+							<h2>Big Truck</h2>
+							<p>Cowboy Rob</p>
+						</div>	
+			<!-- End Jplayer data -->
 			<h1>Next Song</h1>
+			<!-- List of songs in queue to play next -->
 			<div class="chat-icon">
 				<li id="play_music">
 						<div class="rap box chat-add"></div>
@@ -220,9 +214,11 @@
 						</div>	
 					</li>
 			</div>
+			<!-- /End of list of songs -->
 			<h3>[LANG]onlineUsers[/LANG]</h3>
-			
+			<!-- List of online users -->
 	  		<div id="onlineList"></div>
+	  		<!--/End of list of online users -->
 	  	</div>
 	  	<div id="helpContainer" style="display:none;">
  			<h3>[LANG]help[/LANG]</h3>
