--- a/sitepage/chat/lib/template/loggedIn.html
+++ b/sitepage/chat/lib/template/loggedIn.html
@@ -191,29 +191,30 @@
 			<!-- End Jplayer data -->
 			<h1>Next Song</h1>
 			<!-- List of songs in queue to play next -->
+			<ul>
 			<div class="chat-icon">
-				<li id="play_music">
-						<div class="rap box chat-add"></div>
+					<li id="play_music">
+						<a href="#"><div class="rap box chat-add"></div></a>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Let it spill</h2>
+							Ol' Boy
 						</div>	
 					</li>
 					<li id="play_music">
-						<div class="rap box chat-add"></div>
+						<a href="#"><div class="rap box chat-add"></div></a>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Cut him loose</h2>
+							Whitney Jean
 						</div>	
 					</li>
 					<li id="play_music">
-						<div class="country box chat-add"></div>
+						<a href="#"><div class="country box chat-add"></div></a>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Add Song</h2>
 						</div>	
 					</li>
 			</div>
+			</ul>
 			<!-- /End of list of songs -->
 			<h3>[LANG]onlineUsers[/LANG]</h3>
 			<!-- List of online users -->
