--- a/sitepage/css/site.css
+++ b/sitepage/css/site.css
@@ -90,13 +90,15 @@ h1 {
     text-align: center;
 }
 h2{
-	font-family:header2Font; 
-	font-size: 21px;
+	font-family:header2Font;
+	font-weight: bold; 
+	font-size: 24px;
 	margin-top: 6px;
 	margin-bottom: 0;
+
 }
 p{
-	font-size: 18px;
+	font-size: 14px;
 	margin-bottom: 6px;
 }
 
@@ -200,6 +202,10 @@ a{
 .profile-music ol{
 	padding: 0;
 }
+.profile-music h1{
+	margin-top:30px; 
+}
+
 .comments{
 	height: 600px;
 	border: 1px solid #000;
@@ -454,6 +460,42 @@ a{
 }
 .chat-album-img img{
 	width: 100%;
+}
+
+/*============Sign up ==================*/
+.signup_form div{
+	float: left;clear: both;
+	width: 100%;
+	text-align: left;
+}
+
+#myemail,#myusername,#mypassword,#myrealname,#mylocation,#mylocation,#myprofileimg{
+	width: 30%;
+}
+#myage{
+	width: 50px;
+}
+#mysex{
+	width: 100px;
+}
+#mygenre{
+	width: 150px;
+}
+.signup_form button{
+	clear: both;
+	float: left;
+}
+
+.delete{
+	width: 100%;
+	text-align: center;
+	float: left;
+	clear: both;
+	padding: 20px;
+	color: blue;
+}
+.delete_form{
+	height: 60%;
 }
 
 
