--- a/sitepage/chat/lib/template/loggedIn.html
+++ b/sitepage/chat/lib/template/loggedIn.html
@@ -118,7 +118,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand logo" href="../index.html">The Underground</a>
+		      <a class="navbar-brand logo" href="../index.php">The Underground</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -129,11 +129,11 @@
 		        </div>
 		      </form>
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="../index.html">Home</a></li>
-		        <li><a href="../about.html">About</a></li>
+		        <li><a href="../index.php">Home</a></li>
+		        <li><a href="../about.php">About</a></li>
 		        <li><a href="../chat/index.php">Chat</a></li>
-		        <li><a href="../shop.html">Shop</a></li>
-		        <li><a href="../profile.html">Donte</a></li>
+		        <li><a href="../shop.php">Shop</a></li>
+		        <li><a href="../profile.php">Donte</a></li>
 		        
 		      </ul>
 
