--- a/sitepage/chat/lib/template/loggedIn.html
+++ b/sitepage/chat/lib/template/loggedIn.html
@@ -133,7 +133,7 @@
 		        <li><a href="../about.php">About</a></li>
 		        <li><a href="../chat/index.php">Chat</a></li>
 		        <li><a href="../shop.php">Shop</a></li>
-		        <li><a href="../profile.php">Donte</a></li>
+		        <li><a href="../profile.php">User</a></li>
 		        
 		      </ul>
 
@@ -189,7 +189,7 @@
 							<p>Cowboy Rob</p>
 						</div>	
 			<!-- End Jplayer data -->
-			<h1>Next Song</h1>
+			<h1 class="chat_head">Next Song</h1>
 			<!-- List of songs in queue to play next -->
 			<ul>
 			<div class="chat-icon">
@@ -203,7 +203,7 @@
 					<li id="play_music">
 						<a href="#"><div class="rap box chat-add"></div></a>
 						<div class="chat-info">
-							<h2>Cut him loose</h2>
+							<h2>Cut him </h2>
 							Whitney Jean
 						</div>	
 					</li>
@@ -216,7 +216,7 @@
 			</div>
 			</ul>
 			<!-- /End of list of songs -->
-			<h3>[LANG]onlineUsers[/LANG]</h3>
+			<h3 class="chat_head">[LANG]onlineUsers[/LANG]</h3>
 			<!-- List of online users -->
 	  		<div id="onlineList"></div>
 	  		<!--/End of list of online users -->
